--- a/package.json
+++ b/package.json
@@ -1,30 +1,17 @@
 {
-  "name": "easypanel-sdk",
+  "name": "easypanel-api",
   "type": "module",
   "version": "0.3.1",
   "packageManager": "pnpm@8.10.0",
-  "description": "EasyPanel is Next Generation Server Control Panel",
-  "author": "Mehmet - hi@productdevbook.com",
-  "license": "MIT",
-  "funding": "https://github.com/sponsors/productdevbook",
-  "homepage": "https://productdevbook.com",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Easypanel-Community/easypanel.git"
-  },
-  "bugs": "https://github.com/Easypanel-Community/easypanel/issues",
-  "keywords": [
-    "easypanel",
-    "typescript easypanel",
-    "easypanel api",
-    "easypanel-sdk"
-  ],
+  "description": "fix bug of EasyPanel",
   "exports": {
     ".": {
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     }
   },
+  "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
